# FileManager

./: Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
file_manager/: asgi.py  conftest.py  urls.py  wsgi.py
file_manager/apps/common/: enums.py  exception_handler.py  exceptions.py  models.py  paginations.py  routers.py  validators.py
file_manager/apps/files/: admin.py  apps.py  exceptions.py  models.py
file_manager/apps/files/api/: serializers.py  urls_v1.py  views_v1.py
file_manager/apps/files/api/services/: image_service.py
file_manager/apps/files/migrations/: 0001_initial.py
file_manager/apps/files/tests/: conftest.py  test_api_v1.py
file_manager/conf/: settings.py
